\name{NEWS}
\title{News for Package \pkg{PoDCall}}
\encoding{UTF-8}

\section{Changes in version 1.13.1 (2023-05-15)}{
\itemize{
    \item Made PoDCall compatible with multiplexed target assays (multiple
    target channels)
}}

\section{Changes in version 1.11.1 (2023-05-15)}{
\itemize{
    \item Vignette spellcheck
}}

\section{Changes in version 1.9.3 (2023-05-15)}{
\itemize{
    \item Added PoDCall publication citation
}}

\section{Changes in version 1.9.2 (2023-05-10)}{
\itemize{
    \item Bugfixes
}}

\section{Changes in version 1.9.1 (2023-05-03)}{
\itemize{
    \item Made PoDCall compatible with new BioRad software QX Manager
}}

\section{Changes in version 1.7.1 (2023-04-04)}{
\itemize{
    \item Suggest user to change reference well when no threshold for ch 2
}}

\section{Changes in version 1.6.1 (2023-04-03)}{
\itemize{
    \item Better handling of missing threshold, provide suggestion to user
}}

\section{Changes in version 0.99.7 (2021-04-06)}{
\itemize{
    \item Implemented use of Reference well for control channel
}}

\section{Changes in version 0.99.6 (2021-04-06)}{
\itemize{
    \item Updated NEWS.Rd
}}

\section{Changes in version 0.99.5 (2020-12-09)}{
\itemize{
    \item Corrected name of an author
}}

\section{Changes in version 0.99.4 (2020-12-09)}{
\itemize{
    \item Changed R version dependency to >= 4.1 (R-devel)
}}

\section{Changes in version 0.99.3 (2020-12-081)}{
\itemize{
    \item Minor code changes as suggested by Bioconductor reviewer
}}

\section{Changes in version 0.99.2 (2020-11-11)}{
\itemize{
    \item Changed arguments in examples to run faster
}}

\section{Changes in version 0.99.1 (2020-11-11)}{
\itemize{
    \item Removed .Rproj file from repository
}}

\section{Changes in version 0.99.0 (2020-11-10)}{
\itemize{
    \item Submitted to Bioconductor
}}